@@ -1,0 +1,17 @@
+Stuff that came to be while developing and playing with xjadeo.
+
+xjadeo-example.avi
+ example video known to work with xjadeo.
+ it's only one 160x120 frame displaying color-bars Motion JPEG AVI.
+
+encode.sh:
+ tests various mencoder codecs 
+ re-encodes the example video and tries xjadeo -t 
+ outputs an example mencoder line 
+
+
+cli-remote:
+ command line interface - remote xjadeo.
+ example code that generates xjadeo remote commands
+ to be piped into a 'xjadeo -R' instance.
+
