@@ -1,0 +1,8 @@
+bin_PROGRAMS=jadeo-rcli
+
+jadeo_rcli_SOURCES = jadeo.c ../../aclocal.m4 ../../config.h ../../src/xjadeo/jack.c ../../src/xjadeo/midi.c
+jadeo_rcli_CFLAGS = -Wall -g -O3  -I../../src/xjadeo/
+jadeo_rcli_LDADD = -ljack $(MIDI_LIBS) 
+
+MAINTAINERCLEANFILES = Makefile.in
+
